# VoiceAssistant

./: README.md
actions/: package.xml  setup.cfg  setup.py
custom_if/: CMakeLists.txt  package.xml
custom_if/srv/: CallAction.srv  SendSentence.srv
nl_understanding/: package.xml  setup.cfg  setup.py
nl_understanding/nl_understanding/: nl_understanding.py  tcp_client.py
speech_to_text/: package.xml  setup.py
speech_to_text/speech_to_text/: speech_to_text.py
text_to_speech/: package.xml  setup.py
text_to_speech/text_to_speech/: text_to_speech.py
voiceassistant_bringup/: CMakeLists.txt  package.xml
voiceassistant_bringup/launch/: voiceassistant.launch.py
