<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voiceassistant_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ale-scarciglia@libero.it">scarc_industries</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>speech_to_text</exec_depend>
  <exec_depend>text_to_speech</exec_depend>
  <exec_depend>nl_understanding</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
